--- a/GDL/irene_validation/Pmap_summary_dev.ipynb
+++ b/GDL/irene_validation/Pmap_summary_dev.ipynb
@@ -33,8 +33,8 @@
     "testprod_files   = glob.glob(testprod_datadir   + f\"*\")\n",
     "testprod_p_files = glob.glob(testprod_p_datadir + f\"*\")\n",
     "\n",
-    "icversion_files.sort()\n",
-    "testprod_files .sort()\n",
+    "icversion_files .sort()\n",
+    "testprod_files  .sort()\n",
     "testprod_p_files.sort()"
    ]
   },
@@ -55,15 +55,16 @@
     "\n",
     "class S2Signal(tb.IsDescription):\n",
     "    event    = tb.Int64Col  (pos=0)\n",
-    "    time     = tb.Float64Col(pos=1)\n",
-    "    height   = tb.Float64Col(pos=2)\n",
-    "    energy   = tb.Float64Col(pos=3)\n",
-    "    width    = tb.Float64Col(pos=4)\n",
-    "    most_active_PMT = tb.Int64Col(pos=5)\n",
-    "    energy_fraction_most_active_PMT = tb.Float64Col(pos=6)\n",
+    "    file     = tb.Int64Col  (pos=1)\n",
+    "    time     = tb.Float64Col(pos=2)\n",
+    "    height   = tb.Float64Col(pos=3)\n",
+    "    energy   = tb.Float64Col(pos=4)\n",
+    "    width    = tb.Float64Col(pos=5)\n",
+    "    most_active_PMT = tb.Int64Col(pos=6)\n",
+    "    energy_fraction_most_active_PMT = tb.Float64Col(pos=7)\n",
     "    \n",
-    "    charge        = tb.Float64Col(pos=7)\n",
-    "    touched_sipms = tb.Int64Col  (pos=8)\n",
+    "    charge        = tb.Float64Col(pos=8)\n",
+    "    touched_sipms = tb.Int64Col  (pos=9)\n",
     "    \n",
     "class n_events(tb.IsDescription):\n",
     "    file_number = tb.Int64Col(pos=0)\n",
@@ -72,7 +73,7 @@
     "class slide_info(tb.IsDescription):\n",
     "    event         = tb.Int64Col  (pos=0)\n",
     "    charge        = tb.Float64Col(pos=1)\n",
-    "    touched_sipms = tb.Int64Col  (pos=2) "
+    "    touched_sipms = tb.Int64Col  (pos=2)"
    ]
   },
   {
@@ -81,34 +82,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#file = f\"./Pmap_Summary_run{run_number}.h5\"\n",
-    "\n",
-    "#h5file = tb.open_file(file, mode=\"w\", title=\"Pmap Summary\")\n",
-    "\n",
-    "#S1group = h5file.create_group(\"/\", 'S1', title='S1 summary')\n",
-    "#S1table = h5file.create_table(S1group, 'S1', S1Signal, title=\"S1 table\")\n",
-    "#S1      = S1table.row\n",
-    "\n",
-    "#S2group = h5file.create_group(\"/\", 'S2', 'S2 summary')\n",
-    "#S2table = h5file.create_table(S2group, 'S2', S2Signal, title=\"S2 table\")\n",
-    "#S2      = S2table.row\n",
-    "\n",
-    "#Nevgroup = h5file.create_group(\"/\", 'N_events', 'Number of events per file')\n",
-    "#Nevtable = h5file.create_table(Nevgroup, 'Nevents', n_events, title=\"Number of events table\")\n",
-    "#Nev      = Nevtable.row\n",
-    "\n",
-    "#Sldgroup = h5file.create_group(\"/\", 'Slide', 'Slide info')\n",
-    "#Sldtable = h5file.create_table(Sldgroup, 'Sld', slide_info, title=\"Slide info table\")\n",
-    "#Sld      = Sldtable.row"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def loop_in_events_PMT(S, Spmap, SPMTpmap, EVENTS):\n",
+    "def loop_in_events_S1(S, Spmap, SPMTpmap, EVENTS):\n",
     "    for ev in EVENTS:\n",
     "        Sgn  = Spmap   [Spmap   [\"event\"]==ev]\n",
     "        SPMT = SPMTpmap[SPMTpmap[\"event\"]==ev]\n",
@@ -128,7 +102,7 @@
     "            PMTS  = np.unique(SPMT[\"npmt\"])\n",
     "            esum = []\n",
     "            for pmt in PMTS:\n",
-    "                enes = SPMT[SPMT[\"npmt\"]==pmt][\"ene\"].values\n",
+    "                enes = SPMT[(SPMT[\"peak\"]==pk)&(SPMT[\"npmt\"]==pmt)][\"ene\"].values\n",
     "                esum.append( np.sum( enes[enes>0]) )\n",
     "                \n",
     "            S[\"most_active_PMT\"] = PMTS[np.argmax(esum)]\n",
@@ -137,28 +111,45 @@
     "            S.append()\n",
     "\n",
     "            \n",
-    "def loop_in_events_S2SI(S, Sld, S2pmap, S2Sipmap, EVENTS):\n",
+    "def loop_in_events_S2(S, Sld, Spmap, SPMTpmap, SSIpmap, EVENTS, file_number):\n",
     "    for ev in EVENTS:\n",
-    "        S2   = S2pmap  [S2pmap  [\"event\"]==ev]\n",
-    "        S2SI = S2Sipmap[S2Sipmap[\"event\"]==ev]\n",
-    "        \n",
-    "        #loop in peaks\n",
-    "        PEAKS = np.unique(S2[\"peak\"])\n",
+    "        Sgn  = Spmap   [Spmap   [\"event\"]==ev]\n",
+    "        SPMT = SPMTpmap[SPMTpmap[\"event\"]==ev]\n",
+    "        SSI  = SSIpmap [SSIpmap [\"event\"]==ev]\n",
+    "\n",
+    "        PEAKS = np.unique(Sgn[\"peak\"])\n",
     "        for pk in PEAKS:\n",
-    "            S2_pk   = S2  [S2[\"peak\"]==pk]\n",
-    "            S2SI_pk = S2SI[ S2SI[\"peak\"] == pk ]\n",
+    "            #Total\n",
+    "            times = Sgn[Sgn[\"peak\"]==pk][\"time\"].values\n",
+    "            enes  = Sgn[Sgn[\"peak\"]==pk][\"ene\"] .values\n",
     "            \n",
-    "            S[\"charge\"]        = np.sum( S2SI_pk[\"ene\"] )\n",
-    "            S[\"touched_sipms\"] = len(np.unique(S2SI_pk[\"nsipm\"]))\n",
+    "            S[\"event\"]  = ev\n",
+    "            S[\"file\" ]  = file_number\n",
+    "            S[\"time\"]   = times[np.argmax(enes)]/10**3\n",
+    "            S[\"height\"] = np.max(enes)\n",
+    "            S[\"energy\"] = np.sum(enes)\n",
+    "            S[\"width\"]  = times[-1]-times[0]\n",
+    "            S[\"charge\"]        = np.sum( SSI[ SSI[\"peak\"] == pk ][\"ene\"] )\n",
+    "            S[\"touched_sipms\"] = len(np.unique(SSI[ SSI[\"peak\"] == pk ][\"nsipm\"]))\n",
+    "\n",
+    "            PMTS  = np.unique(SPMT[\"npmt\"])\n",
+    "            esum = []\n",
+    "            for pmt in PMTS:\n",
+    "                enes = SPMT[(SPMT[\"peak\"]==pk)&(SPMT[\"npmt\"]==pmt)][\"ene\"].values\n",
+    "                esum.append( np.sum( enes[enes>0]) )\n",
+    "\n",
+    "            S[\"most_active_PMT\"] = PMTS[np.argmax(esum)]\n",
+    "            S[\"energy_fraction_most_active_PMT\"] = np.max(esum)/np.sum(esum)*100\n",
     "            \n",
     "            S.append()\n",
     "            \n",
+    "            #slides\n",
     "            if Sld:\n",
-    "                #slides\n",
-    "                nslides = len(S2_pk)\n",
-    "                sipms   = np.unique( S2SI_pk[\"nsipm\"].values )\n",
+    "                nslides = len( Sgn[Sgn[\"peak\"]==pk] )\n",
+    "                sipms   = np.unique( SSI[ SSI[\"peak\"] == pk ][\"nsipm\"] )\n",
+    "                if len(sipms)==0: continue\n",
     "                \n",
-    "                splitted = np.array( np.split(S2SI_pk[\"ene\"].values, len(sipms)) ).T \n",
+    "                splitted = np.array( np.split(SSI[ SSI[\"peak\"] == pk ][\"ene\"].values, len(sipms)) ).T \n",
     "                charge_per_slide = np.sum(splitted, axis=0)\n",
     "                \n",
     "                for slide in splitted:\n",
@@ -170,11 +161,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_and_fill_summary_file(pmapdir, outfile, pmap_range, sldcut = 100):\n",
+    "def create_and_fill_summary_file(pmapdir, outfile, pmap_range, sldcut, sicut):\n",
     "    \n",
     "    #### CREATE FILE ####\n",
     "    h5file = tb.open_file(outfile, mode=\"w\", title=\"Pmap Summary\")\n",
@@ -187,9 +178,13 @@
     "    \n",
     "    Nevgroup = h5file.create_group(\"/\", 'N_events', 'Number of events per file')\n",
     "    Nevtable = h5file.create_table(Nevgroup, 'Nevents', n_events, title=\"Number of events table\")\n",
-    "\n",
+    "    \n",
     "    Sldgroup = h5file.create_group(\"/\", 'Slide', 'Slide info')\n",
     "    Sldtable = h5file.create_table(Sldgroup, 'Sld', slide_info, title=\"Slide info table\")\n",
+    "    \n",
+    "    \n",
+    "    SIPMgroup = h5file.create_group(\"/\", \"SIPM\", \"Charge by Sipm\")\n",
+    "    \n",
     "    \n",
     "    #### FILL FILE ####\n",
     "    FILES = glob.glob(pmapdir + \"/*\")\n",
@@ -198,6 +193,7 @@
     "    FILES = FILES[start : stop]\n",
     "    \n",
     "    processed = 1\n",
+    "    arr = np.ndarray(shape=(0, 2))\n",
     "    for pmap in FILES:\n",
     "\n",
     "        if pmap.split('_')[-3]==\"v0.9.9\":\n",
@@ -208,43 +204,49 @@
     "        S1pmap, S2pmap, S2SIpmap, S1PMTpmap, S2PMTpmap = load_pmaps_as_df(pmap)\n",
     "        EVENTS = np.unique(S2pmap[\"event\"].values)\n",
     "        \n",
-    "        #### Fill Number of events table ####\n",
+    "        #### Fill Number of events table ####        \n",
     "        Nev = Nevtable.row\n",
     "        Nev[\"file_number\"] = file_number\n",
     "        Nev[\"n_events\"]    = len(EVENTS)\n",
     "        Nev.append()\n",
     "        \n",
     "        #### Fill S1s ####\n",
-    "        loop_in_events_PMT(S1table.row, S1pmap, S1PMTpmap, EVENTS)\n",
+    "        loop_in_events_S1(S1table.row, S1pmap, S1PMTpmap, EVENTS)\n",
     "        \n",
-    "        ##### Fill S2s PMT data ####\n",
-    "        loop_in_events_PMT (S2table.row,              S2pmap, S2PMTpmap, EVENTS)\n",
+    "        #### Fill S1s ####\n",
+    "        if processed>sldcut: Sld = None\n",
+    "        else:                Sld = Sldtable.row\n",
+    "        loop_in_events_S2(S2table.row, Sld, S2pmap, S2PMTpmap, S2SIpmap, EVENTS, file_number)\n",
     "        \n",
-    "        if processed>=sldcut:\n",
-    "            Sld = False\n",
-    "        else:\n",
-    "            Sld = Sldtable.row\n",
-    "        loop_in_events_S2SI(S2table.row,         Sld, S2pmap, S2SIpmap, EVENTS)\n",
     "        \n",
-    "        processed =+ 1\n",
-    "    \n",
+    "        if processed<=sicut or sicut>=len(FILES):\n",
+    "            sipm_q = S2SIpmap[S2SIpmap[\"ene\"]>0]\n",
+    "            arr = np.concatenate( (arr, sipm_q[[\"nsipm\", \"ene\"]].values))\n",
+    "            \n",
+    "            if processed==sicut or processed==len(FILES):\n",
+    "                sipmarray = h5file.create_array(SIPMgroup, 'sipm_charge', arr, \"SIPM charges\")\n",
+    "                sipmarray.flush()\n",
+    "        \n",
+    "        processed += 1\n",
+    "        \n",
+    "        \n",
     "    #### Save data to disk and close ####\n",
-    "    Nevtable.flush()\n",
-    "    S1table .flush()\n",
-    "    S2table .flush()\n",
-    "    Sldtable.flush()\n",
+    "    Nevtable .flush()\n",
+    "    S1table  .flush()\n",
+    "    S2table  .flush()\n",
+    "    Sldtable .flush()\n",
     "    \n",
     "    h5file.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "outfile = f\"./Pmap_Summary_run{run_number}.h5\"\n",
-    "create_and_fill_summary_file(icversion_datadir, outfile, [0, 5])"
+    "create_and_fill_summary_file(icversion_datadir, outfile, [0, 3])"
    ]
   },
   {
@@ -256,35 +258,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
     "h5file = tb.open_file(outfile)\n",
     "h5file;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_df( h5file.root.Slide.Sld.read() );"
    ]
   },
   {
